--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,22 @@
 
 <body>
     <h1 th:text="${title}"></h1>
+    <!-- <table th:if="${!users.isEmpty()}">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Mail</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="user: ${users}">
+                <td th:text="${user.nombre}"></td>
+                <td th:text="${user.apellido}"></td>
+                <td th:text="${user.email}"></td>
+            </tr>
+        </tbody>
+    </table> -->
 </body>
 
 </html>
